// Vitest Snapshot v1

exports[`Progress > Progress circleVue demo works fine 1`] = `
<t-space
  data-v-0a03ddaa=""
  direction="vertical"
  size="36"
>
  <div
    data-v-0a03ddaa=""
  >
    默认
  </div>
  <t-space
    class="ml-36px"
    data-v-0a03ddaa=""
    size="78"
  >
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        默认样式
      </div>
      <t-progress
        data-v-0a03ddaa=""
        percentage="30"
        theme="circle"
      />
    </t-space>
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        不显示数字
      </div>
      <t-progress
        data-v-0a03ddaa=""
        percentage="100"
        status="success"
        theme="circle"
      />
    </t-space>
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        自定义内容
      </div>
      <t-progress
        data-v-0a03ddaa=""
        label="75day"
        percentage="50"
        status="success"
        theme="circle"
      />
    </t-space>
  </t-space>
  <t-space
    class="ml-36px"
    data-v-0a03ddaa=""
    size="78"
  >
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        进度完成
      </div>
      <t-progress
        data-v-0a03ddaa=""
        percentage="100"
        status="success"
        theme="circle"
      />
    </t-space>
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        进度状态发生错误
      </div>
      <t-progress
        data-v-0a03ddaa=""
        percentage="75"
        status="error"
        theme="circle"
      />
    </t-space>
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        进度被中断
      </div>
      <t-progress
        data-v-0a03ddaa=""
        percentage="50"
        status="warning"
        theme="circle"
      />
    </t-space>
  </t-space>
  <div
    data-v-0a03ddaa=""
  >
    默认不同尺寸
  </div>
  <t-space
    class="ml-44px"
    data-v-0a03ddaa=""
    size="110"
  >
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        小尺寸
      </div>
      <t-progress
        data-v-0a03ddaa=""
        percentage="30"
        size="small"
        theme="circle"
      />
    </t-space>
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        默认尺寸
      </div>
      <t-progress
        data-v-0a03ddaa=""
        percentage="30"
        size="medium"
        theme="circle"
      />
    </t-space>
    <t-space
      align="center"
      data-v-0a03ddaa=""
      direction="vertical"
      size="10"
    >
      <div
        data-v-0a03ddaa=""
      >
        大尺寸
      </div>
      <t-progress
        data-v-0a03ddaa=""
        percentage="75"
        size="large"
        theme="circle"
      />
    </t-space>
  </t-space>
</t-space>
`;

exports[`Progress > Progress customVue demo works fine 1`] = `
<t-space
  data-v-4224b168=""
  direction="vertical"
  size="20"
>
  <div
    data-v-4224b168=""
  >
    <div
      data-v-4224b168=""
    >
      不显示标签
    </div>
    <t-progress
      data-v-4224b168=""
      percentage="84"
      theme="circle"
    />
    <t-progress
      data-v-4224b168=""
      percentage="84"
      theme="line"
    />
  </div>
  <div
    data-v-4224b168=""
  >
    <div
      data-v-4224b168=""
    >
      自定义高度
    </div>
    <t-progress
      color="#FFC86E,#E66A72"
      data-v-4224b168=""
      percentage="30"
      strokewidth="30"
      theme="line"
    />
    <div
      data-v-4224b168=""
    >
      自定义尺寸
    </div>
    <t-progress
      data-v-4224b168=""
      percentage="30"
      size="200"
      strokewidth="20"
      theme="circle"
    />
  </div>
  <div
    data-v-4224b168=""
  >
    <div
      data-v-4224b168=""
    >
      自定义颜色
    </div>
    <t-progress
      color="[object Object]"
      data-v-4224b168=""
      percentage="30"
      theme="plump"
    />
    <t-progress
      color="#52CC8D"
      data-v-4224b168=""
      percentage="44"
      theme="circle"
      trackcolor="#aaa"
    />
  </div>
  <div
    data-v-4224b168=""
  >
    <div
      data-v-4224b168=""
    >
      自定义内容
    </div>
    <t-progress
      data-v-4224b168=""
      label="<div>45days</div>"
      percentage="30"
      theme="line"
    />
    <t-progress
      data-v-4224b168=""
      label="<div>45days</div>"
      percentage="44"
      theme="circle"
    />
  </div>
</t-space>
`;

exports[`Progress > Progress lineVue demo works fine 1`] = `
<t-space
  data-v-c74931e2=""
  direction="vertical"
  size="24"
>
  <h3
    data-v-c74931e2=""
  >
    默认在线形外展示进度和状态
  </h3>
  <div
    data-v-c74931e2=""
  >
    <div
      class="t-progress-domo-margin"
      data-v-c74931e2=""
    >
      默认样式
    </div>
    <t-progress
      data-v-c74931e2=""
      percentage="30"
      theme="line"
    />
    <div
      class="t-progress-domo-margin"
      data-v-c74931e2=""
    >
      100%
    </div>
    <t-progress
      data-v-c74931e2=""
      percentage="100"
      theme="line"
    />
    <div
      class="t-progress-domo-margin"
      data-v-c74931e2=""
    >
      进度完成
    </div>
    <t-progress
      data-v-c74931e2=""
      percentage="60"
      status="success"
      theme="line"
    />
    <div
      class="t-progress-domo-margin"
      data-v-c74931e2=""
    >
      进度状态发生重大错误
    </div>
    <t-progress
      data-v-c74931e2=""
      percentage="60"
      status="error"
      theme="line"
    />
    <div
      class="t-progress-domo-margin"
      data-v-c74931e2=""
    >
      进度被中断
    </div>
    <t-progress
      data-v-c74931e2=""
      percentage="60"
      status="warning"
      theme="line"
    />
    <div
      class="t-progress-domo-margin"
      data-v-c74931e2=""
    >
      渐变色
    </div>
    <t-progress
      color="[object Object]"
      data-v-c74931e2=""
      percentage="60"
      status="active"
      theme="line"
    />
  </div>
  <h3
    data-v-c74931e2=""
  >
    可以在线形内展示进度信息
  </h3>
  <div
    data-v-c74931e2=""
  >
    <div
      class="t-progress-domo-margin"
      data-v-c74931e2=""
    >
      默认样式
    </div>
    <t-progress
      data-v-c74931e2=""
      percentage="30"
      theme="plump"
    />
    <div
      class="t-progress-domo-margin"
      data-v-c74931e2=""
    >
      进度0-10%时数字位置出现在目前进度的右边区域
    </div>
    <t-progress
      data-v-c74931e2=""
      percentage="5"
      theme="plump"
    />
  </div>
</t-space>
`;

exports[`Progress > Progress plumpVue demo works fine 1`] = `
<div
  data-v-098b085e=""
>
  <div
    data-v-098b085e=""
  >
    <div
      class="t-progress-domo-margin"
      data-v-098b085e=""
    >
      默认样式
    </div>
    <t-progress
      data-v-098b085e=""
      percentage="30"
      theme="plump"
    />
    <div
      class="t-progress-domo-margin"
      data-v-098b085e=""
    >
      进度0-10%时数字数字位置出现在目前进度的右边区域
    </div>
    <t-progress
      data-v-098b085e=""
      percentage="5"
      theme="plump"
    />
    <div
      class="t-progress-domo-margin"
      data-v-098b085e=""
    >
      100%
    </div>
    <t-progress
      data-v-098b085e=""
      percentage="100"
      theme="plump"
    />
    <div
      class="t-progress-domo-margin"
      data-v-098b085e=""
    >
      进度完成
    </div>
    <t-progress
      data-v-098b085e=""
      percentage="30"
      status="success"
      theme="plump"
    />
    <div
      class="t-progress-domo-margin"
      data-v-098b085e=""
    >
      进度状态发生重大错误
    </div>
    <t-progress
      data-v-098b085e=""
      percentage="30"
      status="error"
      theme="plump"
    />
    <div
      class="t-progress-domo-margin"
      data-v-098b085e=""
    >
      进度被中断
    </div>
    <t-progress
      data-v-098b085e=""
      percentage="30"
      status="warning"
      theme="plump"
    />
    <div
      class="t-progress-domo-margin"
      data-v-098b085e=""
    >
      渐变色
    </div>
    <t-progress
      color="[object Object]"
      data-v-098b085e=""
      percentage="30"
      status="active"
      theme="plump"
    />
  </div>
</div>
`;

exports[`Progress > Progress sizeVue demo works fine 1`] = `
<div
  data-v-f0046ec8=""
>
  <div
    data-v-f0046ec8=""
  >
    默认
  </div>
  <div
    class="t-progress-domo-flex t-progress-domo-margin"
    data-v-f0046ec8=""
  >
    <div
      class="t-progress-domo-inner"
      data-v-f0046ec8=""
    >
      <t-progress
        data-v-f0046ec8=""
        percentage="30"
        theme="circle"
      />
    </div>
    <div
      class="t-progress-domo-inner"
      data-v-f0046ec8=""
    >
      <t-progress
        data-v-f0046ec8=""
        percentage="75"
        status="error"
        theme="circle"
      />
    </div>
    <div
      class="t-progress-domo-inner"
      data-v-f0046ec8=""
    >
      <t-progress
        data-v-f0046ec8=""
        percentage="50"
        status="warning"
        theme="circle"
      />
    </div>
    <div
      class="t-progress-domo-inner"
      data-v-f0046ec8=""
    >
      <t-progress
        data-v-f0046ec8=""
        percentage="100"
        status="success"
        theme="circle"
      />
    </div>
  </div>
  <div
    data-v-f0046ec8=""
  >
    默认不同尺寸
  </div>
  <div
    class="t-progress-domo-margin"
    data-v-f0046ec8=""
  >
    <div
      data-v-f0046ec8=""
    >
      小尺寸
    </div>
    <t-progress
      data-v-f0046ec8=""
      percentage="30"
      size="small"
      theme="circle"
    />
    <div
      data-v-f0046ec8=""
    >
      大尺寸
    </div>
    <t-progress
      data-v-f0046ec8=""
      percentage="75"
      size="large"
      theme="circle"
    />
  </div>
</div>
`;

exports[`Progress > Progress statusVue demo works fine 1`] = `
<div
  data-v-4bfcc34d=""
>
  <div
    data-v-4bfcc34d=""
  >
    <div
      data-v-4bfcc34d=""
    >
      进度完成：
    </div>
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="success"
      theme="line"
    />
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="success"
      theme="plump"
    />
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="warning"
      theme="circle"
    />
  </div>
  <div
    data-v-4bfcc34d=""
  >
    <div
      data-v-4bfcc34d=""
    >
      进度状态出现重大错误（如下载的文件有损）：
    </div>
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="error"
      theme="line"
    />
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="error"
      theme="plump"
    />
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="error"
      theme="circle"
    />
  </div>
  <div
    data-v-4bfcc34d=""
  >
    <div
      data-v-4bfcc34d=""
    >
      进度被中断（如失去网络连接）
    </div>
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="warning"
      theme="line"
    />
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="warning"
      theme="plump"
    />
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="warning"
    />
    <t-progress
      class="t-progress-domo-margin"
      data-v-4bfcc34d=""
      percentage="80"
      status="warning"
      theme="circle"
    />
  </div>
</div>
`;
